--- a/src/app/json-form/json-form.component.html
+++ b/src/app/json-form/json-form.component.html
@@ -1,1 +1,11 @@
-<p>json-form works!</p>
+<form [formGroup]="myForm" (ngSubmit)="onSubmit()">
+  <div *ngFor="let control of jsonFormData?.controls">
+    <label>{{ control.label }}</label>
+    <input
+      [type]="control.type"
+      [formControlName]="control.name"
+      [value]="control.value"
+    />
+  </div>
+  <button type="submit">Submit</button>
+</form>
