--- a/src/app/json-form/json-form.component.html
+++ b/src/app/json-form/json-form.component.html
@@ -1,11 +1,46 @@
 <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
   <div *ngFor="let control of jsonFormData?.controls">
-    <label>{{ control.label }}</label>
+    <label *ngIf="control.label !== ''">{{ control.label }}</label>
     <input
+      *ngIf="
+        [
+          'text',
+          'password',
+          'email',
+          'number',
+          'search',
+          'tel',
+          'url'
+        ].includes(control.type)
+      "
       [type]="control.type"
       [formControlName]="control.name"
       [value]="control.value"
     />
+    <textarea
+      *ngIf="control.type === 'textarea'"
+      [formControlName]="control.name"
+      [value]="control.value"
+    ></textarea>
+    <input
+      type="checkbox"
+      *ngIf="control.type === 'checkbox'"
+      [formControlName]="control.name"
+      [checked]="control.value"
+    />
+    <input
+      type="checkbox"
+      *ngIf="control.type === 'toggle'"
+      [formControlName]="control.name"
+      [checked]="control.value"
+    />
+    <input
+      type="range"
+      *ngIf="control.type === 'range'"
+      [min]="control.options?.min"
+      [max]="control.options?.max"
+      [formControlName]="control.name"
+    />
   </div>
-  <button type="submit">Submit</button>
+  <button expand="full" type="submit">Submit</button>
 </form>
